--- a/README
+++ b/README
@@ -1,30 +1,28 @@
-Implemented features:
+Improvements over original firmware
 
-(1) fine volume adjustment
-
-
-Basic clock still needs:
-
-(1) show day-of-week and date on button press when displaying time
-
-(2) date format select
-
-(3) time format select
+(1) refined volume adjustment
+(2) alarm works during sleep
 
 
-Desired extra features:
+Wish List:
 
-(1) Shorten the snooze time so I don't fall asleep before the alarm goes off again.  Changing the snooze time is easy, but figuring out the ideal snooze time for me is requiring some trial and error...
+(1) adjustable snooze [1-30]
 
 (2) progressive alarm
 
-(3) Automatically adjust for the clock running too fast or slow:  If you set the clock time, and set the time again a week later, the clock can figure out if it's running fast or slow...and adjust it's timekeeping accordingly!
+(3) automatic drift correction
 
-(4) Lower power consumption when clock sleeps:  When the power goes out, the clock goes to sleep and runs on the internal battery.  Currently the battery lasts two weeks, but in theory it could last years.  All I need to do is shut
+Automatically adjust for the clock running too fast or slow:  If you set the clock time, and set the time again a week later, the clock can figure out if it's running fast or slow...and adjust it's timekeeping accordingly!
+
+(4) optimized power savings
+
+Lower power consumption when clock sleeps:  When the power goes out, the clock goes to sleep and runs on the internal battery.  Currently the battery lasts two weeks, but in theory it could last years.  All I need to do is shut
 down the watchdog timer, analog comparator and maybe some other features.  Analog comparator could be enabled on tick to detect when power is restored.
 
-(5) Alarm should still function even if on battery power only.
+(5) DST adjustment
 
-(6) Automatic adjustment for daylight savings time in US.
+Automatic adjustment for daylight savings time in US.
 
-(7) Brightness adjustment based on ambient light
+(6) auto dimmer
+
+Brightness adjustment based on ambient light.
