--- a/README
+++ b/README
@@ -17,17 +17,19 @@ became a feature-rich reimplementation of the original Adafruit firmware.
 
 This firmware boasts many features including,
 
-    (1) adjustable alarm volume (11 levels),
+    (1) three alarms by time and days of the week,
+    (2) adjustable alarm volume (11 levels),
     (3) progressive alarm option (low to high volume),
-    (2) musical alarm option ("Merry Christmas" or buzzer),
-    (4) DST support (USA, EU, or manual),
-    (5) automatic drift correction,
-    (6) time-from-GPS support,
-    (7) alarm sounds during power outage,*
-    (8) no reset or time loss during power failure,
-    (9) per-digit brightness control,
-   (10) optionally set brightness by ambient light,** and
-   (11) optionally disable display at night (when dark)**
+    (4) three alarm sounds (beeps, Merry Christmas, or Big Ben),
+    (5) adjustable snooze time,
+    (6) DST support (USA, EU, or manual),
+    (7) automatic drift correction,
+    (8) time-from-GPS support,
+    (9) alarm sounds during power outage,*
+   (10) no beeping or time loss after power failure,
+   (11) per-digit brightness control,
+   (12) optionally set brightness by ambient light,** and
+   (13) optionally disable display at night (when dark)**
 
 *  The snooze feature, musical alarm, and progressive alarm, are automatically
    disabled during a power failure.  While on battery power, the buzzer alarm
