Added animated display transitions (thanks Jeremy Fitzhardinge!)
The display transitions were modeled after Jeremy Fitzhardinge's
firmware:  https://github.com/jsgf/iceclock

The display transitions do help with understanding the menu structure
during navigation.  Even so, they may get annoying to some, so I will
most likely add a menu option to disable them in the very near future.

In fact I suspect I will grow tired of them in a day or so...  But
maybe not!

--- a/README
+++ b/README
@@ -30,6 +30,8 @@ This firmware boasts many features including,
    (11) per-digit brightness control,
    (12) optionally set brightness by ambient light,** and
    (13) optionally disable display at night (when dark)**
+   (14) animated display transitions (inspired by Jeremy Fitzhardinge's
+	firmware:  https://github.com/jsgf/iceclock)
 
 *  The snooze feature, musical alarm, and progressive alarm, are automatically
    disabled during a power failure.  While on battery power, the buzzer alarm
