Added Reveille alarm sound
Reveille (also known as "Roll Call") is the military music used to
wake the troops in the morning.  To my ear, it sounds surprisingly
good on the Ice Tube Clock's pizo element!

--- a/README
+++ b/README
@@ -20,7 +20,7 @@ This firmware boasts many features including,
     (1) three alarms by time and days of the week,
     (2) adjustable alarm volume (11 levels),
     (3) progressive alarm option (low to high volume),
-    (4) three alarm sounds (beeps, Merry Christmas, or Big Ben),
+    (4) alarm sounds (beeps, Merry Christmas, Big Ben, or Reveille),
     (5) adjustable snooze time,
     (6) DST support (USA, EU, or manual),
     (7) automatic drift correction,
