Added Maxim DS32kHz support
As described in the Adafruit Clocks forum, the Maxim DS32kHz may be
used with the Ice Tube Clock to increase the accuracy of timekeeping.

http://forums.adafruit.com/viewtopic.php?f=41&t=14941

This feature may be enabled by defining the EXTERNAL_CLOCK macro in
config.h.  Doing so, allows the ATmega328p to accept an external clock
signal on XTAL1 instead of the usual crystal oscillator.  Also,
defining this macro raises the BOD threshold voltage from 1.8 to 2.7,
because the DS32kHz requires 2.7 volts for timekeeping.

I also moved the ADAFRUIT_BUTTONS macro from the Makefile to config.h,
where future compile-time options belong.

Finally, the Makefile no longer defines fuse bits.  Instead, fuse bits
and lock bits are defined in the code (icetube.c).

--- a/README
+++ b/README
@@ -74,15 +74,18 @@ In regard to software, compilation and installation seems to work under
 
 To compile and install this firmware, edit and use the provided Makefile:
 
-(1) Edit Configuration Variables
+(1) Edit the Configuration Variables
 
-    Review the Makefile to ensure that configuration variables are
-    reasonable given your hardware.  In particular, AVRMCU, AVRISP,
+    First, review the macro definitions in config.h, changing macro
+    definitions as needed to enable support for various hardware hacks.
+
+    Next, review the Makefile to ensure that configuration variables
+    are reasonable given your hardware.  In particular, AVRMCU, AVRISP,
     and AVRDUDEOPT seem most likely to require attention.
 
 (2) Compile the Firmware
 
-    Build icetube_flash.hex and icetube_eeprom.hex, which contain
+    Build icetube.elf, icetube_eeprom.hex, which contain
     the firmware and initial EEPROM contents:
 
 	% make
